--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(generic_classes)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(generic_classes src/main.cpp)
+add_executable(generic_classes src/main.cpp
+        src/Containers/LinkedLists/SinglyCircularLinkedList.hpp)
