[ADD] Array tests file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,12 @@ set(SOURCE_FILES generic-classes.cpp
 add_library(generic_classes STATIC ${HEADER_FILES} ${SOURCE_FILES})
 
 add_executable(Vectors tests/Vectors.cpp)
+add_executable(Array tests/Array.cpp)
+
 target_link_libraries(Vectors PRIVATE generic_classes)
+target_link_libraries(Array PRIVATE generic_classes)
 
 enable_testing()
 
 add_test(NAME Vectors COMMAND $<TARGET_FILE:Vectors>)
+add_test(NAME Array COMMAND $<TARGET_FILE:Array>)
