--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,11 +33,14 @@ add_library(generic_classes STATIC ${HEADER_FILES} ${SOURCE_FILES})
 
 add_executable(Vectors tests/Vectors.cpp)
 add_executable(Array tests/Array.cpp)
+add_executable(Colors tests/Colors.cpp)
 
 target_link_libraries(Vectors PRIVATE generic_classes)
 target_link_libraries(Array PRIVATE generic_classes)
+target_link_libraries(Colors PRIVATE generic_classes)
 
 enable_testing()
 
 add_test(NAME Vectors COMMAND $<TARGET_FILE:Vectors>)
 add_test(NAME Array COMMAND $<TARGET_FILE:Array>)
+add_test(NAME Colors COMMAND $<TARGET_FILE:Colors>)
