--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ set(HEADER_FILES generic-classes.h
         src/Math/Matrix1x1.inl
         src/Math/Matrix2x2.hpp
         src/Math/Matrix2x2.inl
+        src/Math/Matrix3x3.hpp
+        src/Math/Matrix3x3.inl
 )
 
 set(SOURCE_FILES generic-classes.cpp
